# dbt-sample-incremental-data-project

./: .env.sample  .gitignore  README.md  datagen.yml  dbt_project.yml  generate.py  profiles.yml  pyproject.toml
macros/datagen/: README.md  generate_raw_data.sql  generate_transactions.sql  masters.sql  update_masters.sql
master_data/: customers.csv  products.csv  stores.csv  supplies.csv
models/marts/: _marts.yml  customer_summary.sql  customers.sql  customers.yml  order_items.sql  orders.sql  orders_inc.sql  products.sql  supplies.sql
models/staging/: __sources.yml  _staging.yml  stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
