[project]
name = "jaffle-shop-datagen"
version = "0.1.0"
description = "源泉をマクロ生成に置き換えた jaffle_shop サンプル(dbt-core + dbt-duckdb)。"
requires-python = ">=3.11"
dependencies = [
    # dbt 本体とアダプタ。`uv run dbt ...` で実行する。
    "dbt-duckdb>=1.9",
    # 源泉(jaffle_shop.duckdb)を直接クエリするための DuckDB Python ライブラリ。
    "duckdb==1.5.3",
]
